Rename wl-parser -> wl-parse

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 wl-library-link-sys = { path = "../wl-library-link-sys" }
 wl-expr = { path = "../wl-expr" }
 wl-lang = { path = "../wl-lang" }
-wl-parser = { path = "../wl-parser" }
+wl-parse = { path = "../wl-parse" }
