--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ edition = "2018"
 [dependencies]
 
 [build-dependencies]
-bindgen = "^0.31"
-lazy_static = "^1.1"
+# Use an exact, known-good version, since we really don't want small bugs in bindgen to a
+# be a problem when running `cargo build` for the first time.
+bindgen = "=0.32"
+# lazy_static = "^1.1"
