--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "wl-library-link-sys"
 version = "0.1.0"
 authors = ["Connor Gray <accounts@connorgray.com>"]
 edition = "2018"
+publish = false
 
 # TODO: Use the 'links' key?
 #       See: https://doc.rust-lang.org/cargo/reference/build-scripts.html#a-sys-packages
