--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "wl-library-link"
 version = "0.1.0"
 authors = ["Connor Gray <accounts@connorgray.com>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 wl-library-link-sys = { git = "ssh://github.com/ConnorGray/wl-library-link-sys.git" }
