Add code to catch panic's which occur in wrapped code
This essentially just copies the wl_compile::library_link::catch_panic
file. The source will be removed in a cooresponding commit to
wl-compile.

  * Add dependency on wl-expr-proc-macro
  * Add dependency on lazy_static

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ wl-library-link-sys = { git = "ssh://github.com/ConnorGray/wl-library-link-sys.g
 wl-expr = { git = "ssh://github.com/ConnorGray/wl-expr.git" }
 wl-lang = { git = "ssh://github.com/ConnorGray/wl-lang.git" }
 wl-parse = { git = "ssh://github.com/ConnorGray/wl-parse.git" }
+wl-expr-proc-macro = { git = "ssh://github.com/ConnorGray/wl-expr-proc-macro.git", tag = "0.1.1" }
+
+lazy_static = "^1"
