--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ wl-library-link-sys = { git = "ssh://github.com/ConnorGray/wl-library-link-sys.g
 wl-expr             = { git = "ssh://github.com/ConnorGray/wl-expr.git" }
 wl-lang             = { git = "ssh://github.com/ConnorGray/wl-lang.git" }
 wl-parse            = { git = "ssh://github.com/ConnorGray/wl-parse.git" }
+wl-symbol-table     = { git = "ssh://github.com/ConnorGray/wl-symbol-table.git" }
 wl-expr-proc-macro  = { git = "ssh://github.com/ConnorGray/wl-expr-proc-macro.git" }
 
 lazy_static = "^1"
