--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ publish = false
 wl-library-link-sys = { git = "ssh://github.com/ConnorGray/wl-library-link-sys.git" }
 wl-expr             = { git = "ssh://github.com/ConnorGray/wl-expr.git" }
 wl-lang             = { git = "ssh://github.com/ConnorGray/wl-lang.git" }
-wl-parse            = { git = "ssh://github.com/ConnorGray/wl-parse.git" }
+wl-parse            = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-parse.git" }
 wl-symbol-table     = { git = "ssh://github.com/ConnorGray/wl-symbol-table.git" }
 wl-expr-proc-macro  = { git = "ssh://github.com/ConnorGray/wl-expr-proc-macro.git" }
 
