--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ wl-expr-macro       = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr
 
 lazy_static = "^1"
 backtrace = "^0.3"
+cfg-if = "0.1"
+
+[features]
+default = []
+nightly = []
