--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 publish = false
 
 [dependencies]
+wolfram-library-function-macro = { path = "./wolfram-library-function-macro" }
+
 wl-library-link-sys = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-library-link-sys.git" }
 wl-expr             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr.git" }
 wl-lang             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-lang.git" }
