Replace wl-library-link-sys from stash with local copy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ publish = false
 
 [dependencies]
 wolfram-library-function-macro = { path = "./wolfram-library-function-macro" }
+wl-library-link-sys            = { path = "./wl-library-link-sys" }
 
-wl-library-link-sys = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-library-link-sys.git" }
 wl-wstp             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-wstp.git" }
 wl-expr             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr.git" }
 wl-lang             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-lang.git" }
