Support #[pattern(..)] on #[wolfram_library_function] functions
    #[wolfram_library_function]
    #[pattern(arg1_?NumberQ, arg2_String, rest___)]
    pub fn downvalue_example(
        _engine: &WolframEngine,
        arg1: Number,
        arg2: String,
        rest: Sequence<Expr>,
    ) -> Expr {
        ...
    }

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,7 @@ crate-type = ["cdylib"]
 [[example]]
 name = "structured_expressions"
 crate-type = ["cdylib"]
+
+[[example]]
+name = "downvalue"
+crate-type = ["cdylib"]
