Use the nightly Diagnostic API to emit `note:`s with the WL needed to load a #[wolfram_library_function]`
See commented added to lib.rs in this commit for details.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ wl-parse         = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-parse.g
 
 [features]
 default = []
-nightly = []
+nightly = ["wolfram-library-function-macro/nightly"]
 
 ############
 # Examples #
