--- a/wl-library-link/Cargo.toml
+++ b/wl-library-link/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 
 [dependencies]
 wolfram-library-function-macro = { path = "./wolfram-library-function-macro" }
-wl-library-link-sys            = { path = "./wl-library-link-sys" }
+wl-library-link-sys            = { path = "../wl-library-link-sys" }
 
 wstp                = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wstp.git" }
 wl-expr             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr.git" }
