fixup: Update paths in Makefile.toml and BuildPaclet.wls to use new repo layout

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,3 +1,10 @@
+[config]
+default_to_workspace = false
+
+#-----------------
+# Task definitions
+#-----------------
+
 [tasks.paclet]
 dependencies = ["copy-library-resources"]
 script = { file = "./scripts/BuildPaclet.wls"}
@@ -5,15 +12,15 @@ script = { file = "./scripts/BuildPaclet.wls"}
 [tasks.copy-library-resources]
 dependencies = ["clean-library-resources", "build-library-resources"]
 script = '''
-mkdir LibraryResources
-cp ./target/debug/examples/libraw_wstp_function.dylib ./LibraryResources/
+mkdir RustLink/LibraryResources
+cp ./target/debug/examples/libraw_wstp_function.dylib ./RustLink/LibraryResources/
 '''
 
 [tasks.clean-library-resources]
 script = '''
-rm -rf ./LibraryResources
+rm -rf ./RustLink/LibraryResources
 '''
 
 [tasks.build-library-resources]
 command = "cargo"
-args = ["build"]
+args = ["build", "--examples"]
