feature: Improve support for working with NumericArrays
* Add generic type parameter to NumericArray, which defaults to an "unknown" type
* Add NumericArrayKind enum and NumericArray<()>::kind() method for turning a NumericArray
  of unknown element type into a NumericArray with known element type.
* Add NumericArray<()>::{try_kind, try_into_kind} methods
* Add NumericArray<T>::{data, data_type, flattened_length} methods
* Add examples/numeric_arrays.rs + MUnit tests
* Change bindgen handling of MNumericArray_Data_Type to produce constants in a module, rather
  than an enum. This simplifies logic for converting between integral and enum value.
* Publicly export the NumericArray and NumericArrayKind types

--- a/wl-library-link/Cargo.toml
+++ b/wl-library-link/Cargo.toml
@@ -50,3 +50,7 @@ crate-type = ["cdylib"]
 [[example]]
 name = "downvalue"
 crate-type = ["cdylib"]
+
+[[example]]
+name = "numeric_arrays"
+crate-type = ["cdylib"]
