feature: Add example demonstrating an asynchronous task which checks for modifications to a file
* Make get_library_data() public
* Change LIBRARY_DATA from thread_local! to lazy_static!, so that it
  is shared between the main thread and any background async task threads.
* impl Send for WolframLibraryData

--- a/wl-library-link/Cargo.toml
+++ b/wl-library-link/Cargo.toml
@@ -54,3 +54,12 @@ crate-type = ["cdylib"]
 [[example]]
 name = "numeric_arrays"
 crate-type = ["cdylib"]
+
+#---------------
+# Async examples
+#---------------
+
+[[example]]
+name = "async_file_watcher_raw"
+path = "examples/async/async_file_watcher_raw.rs"
+crate-type = ["cdylib"]
