feature: Add wrappers around WL LibraryLink async task operations
* Add spawn_async_task_with_thread()
* Add AsyncTaskObject
* Add DataStore
* Add examples/async/async_file_watcher.rs
  - This functions the same as async_file_watcher_raw.rs, but is implemented
    using these new more convenient and safe wrappers.

--- a/wl-library-link/Cargo.toml
+++ b/wl-library-link/Cargo.toml
@@ -60,6 +60,11 @@ crate-type = ["cdylib"]
 #---------------
 
 [[example]]
+name = "async_file_watcher"
+path = "examples/async/async_file_watcher.rs"
+crate-type = ["cdylib"]
+
+[[example]]
 name = "async_file_watcher_raw"
 path = "examples/async/async_file_watcher_raw.rs"
 crate-type = ["cdylib"]
