--- a/wl-library-link/Cargo.toml
+++ b/wl-library-link/Cargo.toml
@@ -15,6 +15,7 @@ wl-symbol-table     = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-symb
 wxf                 = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wxf.git" }
 
 lazy_static = "^1"
+once_cell = "1.8.0"
 backtrace = "^0.3.46"
 cfg-if = "0.1"
 static_assertions = "1.1.0"
