feature: Expand DataStore API to include more add_*() and add_named_*() methods
* Add DataStore::{add_*, add_named_*} for: bool, i64, f64, mcomplex, str, CStr, DataStore, NumericArray
* Add NumericArray::into_generic() method
* Add new examples/tests/{main.rs, test_data_store.rs} and DataStore.wlt as a new
  convention for wl-library-link tests which need to be linked into the Kernel to
  run.

--- a/wl-library-link/Cargo.toml
+++ b/wl-library-link/Cargo.toml
@@ -69,3 +69,12 @@ crate-type = ["cdylib"]
 name = "async_file_watcher_raw"
 path = "examples/async/async_file_watcher_raw.rs"
 crate-type = ["cdylib"]
+
+#---------------
+# Tests -- see example/tests/README.md
+#---------------
+
+[[example]]
+name = "library_tests"
+path = "examples/tests/main.rs"
+crate-type = ["cdylib"]
