feature: Add export![] macro for auto-generating safe wrappers
The new export![] macro can be used to automatically generate a LibraryLink-compatible
wrapper function. This makes it easy to define a simple function:

	fn square(x: i64) -> i64 {
		x * x
	}

	fn total_i64(list: &NumericArray<i64>) -> i64 {
		list.as_slice().into_iter().sum()
	}

generate a wrapper callable via LibraryLink:

	wll::export![
		square(_);
		total_i64(_);
	]

and then call the function from Wolfram Language:

	square = LibraryFunctionLoad["...", "square", {Integer}, Integer];

	total  = LibraryFunctionLoad["...", total_i64", {LibraryDataType[NumericArray, "Integer64"]}, Integer];

	square[4]
		=> 16

	total[NumericArray[{1, 2, 3}, "Integer64"]]
		=> 6

See the documentation on the export![] macro for an extended explanation of the
design tradeoffs it makes.

Condensed changelist:

* Add export![] macro
* Add trait IntoArg, for storing values into returned MArgument's
* Add trait NativeFunction, for representing functions whose arguments and return values
  can all be stored in MArgument's.
* Add Tests/NativeArgs.wlt
* Add examples/native_data_types.rs
* Add examples/tests/test_native_args.rs
* Add dependency on ref-cast crate, derive RefCast for NumericArray
* Remove from_args() and trait FromArgs, which are made obsolete by export![]
  These were simultaneously a bit too low-level for functions which want to
  be safe, and a bit too high-level for functions which want to use raw MArguments.
  In particular, safely ensuring that borrowed arguments (e.g. `list: &NumericArray)
  would have the correct lifetime is difficult to catch mistakes in without a wrapper
  function.

--- a/wl-library-link/Cargo.toml
+++ b/wl-library-link/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = "1.8.0"
 backtrace = "^0.3.46"
 cfg-if = "0.1"
 static_assertions = "1.1.0"
+ref-cast = "1.0.6"
 
 [dev-dependencies]
 wl-pattern-match = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-pattern-match.git" }
@@ -31,6 +32,10 @@ nightly = ["wolfram-library-function-macro/nightly"]
 ############
 # Examples #
 ############
+
+[[example]]
+name = "native_data_types"
+crate-type = ["cdylib"]
 
 [[example]]
 name = "raw_wstp_function"
