--- a/wl-library-link/Cargo.toml
+++ b/wl-library-link/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wl-library-link"
+name = "wolfram-library-link"
 version = "0.1.1"
 authors = ["Connor Gray <accounts@connorgray.com>"]
 edition = "2021"
@@ -7,7 +7,7 @@ publish = false
 
 [dependencies]
 wolfram-library-function-macro = { path = "./wolfram-library-function-macro" }
-wl-library-link-sys            = { path = "../wl-library-link-sys" }
+wolfram-library-link-sys       = { path = "../wl-library-link-sys" }
 
 wstp                = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wstp.git" }
 wl-expr             = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr.git" }
