rename part 3: Fix file paths in Cargo.toml's

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 
 members = [
-    "wl-library-link",
-    "wl-library-link-sys"
+    "wolfram-library-link",
+    "wolfram-library-link-sys"
 ]
