docs: Add data_stores.rs and Examples/DataStore.wlt as examples of using DataStore

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -48,6 +48,10 @@ crate-type = ["cdylib"]
 name = "numeric_arrays"
 crate-type = ["cdylib"]
 
+[[example]]
+name = "data_store"
+crate-type = ["cdylib"]
+
 #------------
 # Expressions
 #------------
