cleanup: Move the "raw" examples into their own subdirectory
These examples are the not the first thing that users of the wolfram-library-link
API should see. These are examples of using the "raw" wstp-sys and
wolfram-library-link-sys bindings, which are unsafe and not ergonomic.

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -37,19 +37,25 @@ name = "native_data_types"
 crate-type = ["cdylib"]
 
 [[example]]
-name = "raw_wstp_function"
-crate-type = ["cdylib"]
-
-[[example]]
-name = "raw_librarylink_function"
-crate-type = ["cdylib"]
-
-[[example]]
 name = "numeric_arrays"
 crate-type = ["cdylib"]
 
 [[example]]
 name = "data_store"
+crate-type = ["cdylib"]
+
+#-----------------------------
+# Raw (unsafe, low-level) APIs
+#-----------------------------
+
+[[example]]
+name = "raw_wstp_function"
+path = "examples/raw/raw_wstp_function.rs"
+crate-type = ["cdylib"]
+
+[[example]]
+name = "raw_librarylink_function"
+path = "examples/raw/raw_librarylink_function.rs"
 crate-type = ["cdylib"]
 
 #------------
