cleanup: Rename native_data_types.rs to basic_types.rs
This name is shorter and more suggestive of the fact that this is
probably the first example users should look at.

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -33,7 +33,7 @@ nightly = ["wolfram-library-function-macro/nightly"]
 #=======================================
 
 [[example]]
-name = "native_data_types"
+name = "basic_types"
 crate-type = ["cdylib"]
 
 [[example]]
