feature: Add new export_wstp![] macro for wrapping `fn foo(link: &mut Link) { ... }` functions
* Add new export_wstp! macro, with docs, examples, and tests
* Add new examples/wstp.rs and Examples/WSTP.wlt
* Add new tests/test_wtsp.rs and Tests/WSTP.wlt

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -47,6 +47,11 @@ crate-type = ["cdylib"]
 name = "aborts"
 crate-type = ["cdylib"]
 
+[[example]]
+name = "wstp_example" # avoid "libwstp.dylib", which seems too generic.
+path = "examples/wstp.rs"
+crate-type = ["cdylib"]
+
 #-----------------------------
 # Raw (unsafe, low-level) APIs
 #-----------------------------
