--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -17,6 +17,7 @@ once_cell = "1.8.0"
 backtrace = "^0.3.46"
 static_assertions = "1.1.0"
 ref-cast = "1.0.6"
+inventory = "0.2.1"
 
 [dev-dependencies]
 wl-expr          = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr.git" }
