--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -6,12 +6,10 @@ edition = "2021"
 publish = false
 
 [dependencies]
-wolfram-library-function-macro = { path = "./wolfram-library-function-macro" }
 wolfram-library-link-sys       = { path = "../wolfram-library-link-sys" }
 
 wstp                = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wstp.git" }
 wl-expr-core        = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-expr-core.git" }
-wxf                 = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wxf.git" }
 
 once_cell = "1.8.0"
 backtrace = "^0.3.46"
@@ -25,7 +23,7 @@ wl-pattern-match = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wl-pattern
 
 [features]
 default = []
-nightly = ["wolfram-library-function-macro/nightly"]
+nightly = []
 
 #=======================================
 # Examples
@@ -78,11 +76,6 @@ crate-type = ["cdylib"]
 [[example]]
 name = "structured_expressions"
 path = "examples/exprs/structured_expressions.rs"
-crate-type = ["cdylib"]
-
-[[example]]
-name = "downvalue"
-path = "examples/exprs/downvalue.rs"
 crate-type = ["cdylib"]
 
 #---------------
