Add `license` key to Cargo.toml, License section to README.md, and LICENSE-{MIT, APACHE}

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -2,6 +2,7 @@
 name = "wolfram-library-link"
 version = "0.1.1"
 authors = ["Connor Gray <accounts@connorgray.com>"]
+license = "MIT OR Apache-2.0"
 edition = "2021"
 publish = false
 
