--- a/wolfram-library-link-sys/Cargo.toml
+++ b/wolfram-library-link-sys/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wolfram-library-link-sys"
 version = "0.1.0"
-authors = ["Connor Gray <accounts@connorgray.com>"]
+authors = ["Connor Gray <code@connorgray.com>"]
 edition = "2018"
 publish = false
 
@@ -11,4 +11,4 @@ publish = false
 [dependencies]
 
 [build-dependencies]
-wolfram-app-discovery = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wolfram-app-discovery.git" }
+wolfram-app-discovery = { git = "https://github.com/WolframResearch/wolfram-app-discovery-rs" }
