--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wolfram-library-link"
 version = "0.1.1"
-authors = ["Connor Gray <accounts@connorgray.com>"]
+authors = ["Connor Gray <code@connorgray.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2021"
 publish = false
@@ -9,8 +9,8 @@ publish = false
 [dependencies]
 wolfram-library-link-sys       = { path = "../wolfram-library-link-sys" }
 
-wstp                = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wstp.git" }
-wolfram-expr        = { git = "ssh://git@stash.wolfram.com:7999/~connorg/wolfram-expr.git" }
+wstp         = { git = "https://github.com/WolframResearch/wstp-rs" }
+wolfram-expr = { git = "https://github.com/WolframResearch/wolfram-expr-rs" }
 
 once_cell = "1.8.0"
 backtrace = "^0.3.46"
