chore: Set missing `license` key in sys crate Cargo.toml + remove `publish = false`

--- a/wolfram-library-link-sys/Cargo.toml
+++ b/wolfram-library-link-sys/Cargo.toml
@@ -2,8 +2,8 @@
 name = "wolfram-library-link-sys"
 version = "0.1.0"
 authors = ["Connor Gray <code@connorgray.com>"]
+license = "MIT OR Apache-2.0"
 edition = "2018"
-publish = false
 
 # TODO: Use the 'links' key?
 #       See: https://doc.rust-lang.org/cargo/reference/build-scripts.html#a-sys-packages
