feature: Wrap the LibraryLink managed expressions C API
This commit adds bindings, examples, and basic tests for
the LibraryLink managed expression API.

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -71,6 +71,11 @@ name = "basic_expressions"
 path = "examples/exprs/basic_expressions.rs"
 crate-type = ["cdylib"]
 
+[[example]]
+name = "managed_exprs"
+path = "examples/exprs/managed.rs"
+crate-type = ["cdylib"]
+
 #---------------
 # Async examples
 #---------------
