feature: Add #[init] procedural macro annotation to designate the library initialization function
Basic usage:

	#[wll::init]
	fn init() {
		// ...
	}

See added documentation for details.

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -6,6 +6,8 @@ license = "MIT OR Apache-2.0"
 edition = "2021"
 
 [dependencies]
+wll-proc-macros                = { path = "./wll-proc-macros" }
+
 wolfram-library-link-sys       = { path = "../wolfram-library-link-sys" }
 
 wstp         = { git = "https://github.com/WolframResearch/wstp-rs" }
