Rename wll-proc-macros to wolfram-library-link-macros for consistency
Since this is required to be it's own crate published on crates.io, it's important
that this not have a short "internal" name.

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT OR Apache-2.0"
 edition = "2021"
 
 [dependencies]
-wll-proc-macros                = { path = "./wll-proc-macros" }
+wolfram-library-link-macros    = { path = "./wolfram-library-link-macros" }
 
 wolfram-library-link-sys       = { path = "../wolfram-library-link-sys" }
 
