--- a/wolfram-library-link/wolfram-library-link-macros/Cargo.toml
+++ b/wolfram-library-link/wolfram-library-link-macros/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wll-proc-macros"
+name = "wolfram-library-link-macros"
 version = "0.1.0"
 license = "MIT OR Apache-2.0"
 edition = "2021"
