--- a/wolfram-library-link/wolfram-library-link-macros/Cargo.toml
+++ b/wolfram-library-link/wolfram-library-link-macros/Cargo.toml
@@ -3,6 +3,8 @@ name = "wolfram-library-link-macros"
 version = "0.1.0"
 license = "MIT OR Apache-2.0"
 edition = "2021"
+repository = "https://github.com/WolframResearch/wolfram-library-link-rs"
+description = "Procedural macros used by wolfram-library-link"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
