--- a/wolfram-library-link/wolfram-library-link-macros/Cargo.toml
+++ b/wolfram-library-link/wolfram-library-link-macros/Cargo.toml
@@ -13,5 +13,5 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = "1.0.36"
-syn = { version = "1.0.85", features = [] }
+syn = { version = "1.0.85", features = ["full"] }
 quote = "1.0.14"
