hotfix for v0.1.2: Fix wolfram-library-link/Cargo.toml path to README.md, which is in the parent directory

--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.2"
 authors = ["Connor Gray <code@connorgray.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2021"
-readme = "README.md"
+readme = "../README.md"
 repository = "https://github.com/WolframResearch/wolfram-library-link-rs"
 description = "Bindings to Wolfram LibraryLink"
 keywords = ["wolfram-library-link", "wstp", "wolfram", "wolfram-language", "wolfram-engine"]
