feature: Do compile-time generation of LibraryLink Rust bindings
This avoids having to pre-generate bindings for every target/WL version
combination that users of this library may have.

Pre-generation of bindings was largely a workaround until wolfram-app-discovery
was more complete.

At least one set of pre-generated bindings needs to be included so that docs.rs
documentation builds can succeed (they don't have access to a WL instance).

See also a similar commit in wstp-sys:

	https://github.com/WolframResearch/wstp-rs/pull/30/commits/9fbd2e01fc1118f45eac54cb4ef9bb1426412da8

--- a/wolfram-library-link-sys/Cargo.toml
+++ b/wolfram-library-link-sys/Cargo.toml
@@ -16,4 +16,6 @@ categories = ["external-ffi-bindings", "development-tools::ffi"]
 [dependencies]
 
 [build-dependencies]
+bindgen = "0.59.2"
+
 wolfram-app-discovery = "0.2.1"
