--- a/wolfram-library-link/Cargo.toml
+++ b/wolfram-library-link/Cargo.toml
@@ -23,6 +23,7 @@ backtrace = "^0.3.46"
 static_assertions = "1.1.0"
 ref-cast = "1.0.6"
 inventory = "0.2.1"
+process_path = "0.1.3"
 
 [dev-dependencies]
 
