docs: Add new wolfram_library_link::docs module, with initial 'How To: Convert Between Rust and Wolfram Types'
This How-To guide was motivated by this GitHub issue (#30):

	https://github.com/WolframResearch/wolfram-library-link-rs/issues/30

* Move the RustLink folder into the wolfram-library-link crate folder.

  - This is needed because the Rust and WL code used in the new How-To guide
    are embedded in the built Rust documentation using `#[doc = include_str!(..)]`,
    with files from the RustLink/Examples/Docs directory.

    If the RustLink directory remained in the repo root directory, it would not be
    included in the packages crate sent to crates.io, and consequently the
    documentation would fail to build on docs.rs.

* Update wolfram-library-link/Cargo.toml `include` setting to ensure that only
  the files from RustLink/Examples/Docs get included in the packaged crate.

* Incidental improvements and path updates to scripts/{BuildPaclet.wls, RunTests.wls}

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -23,7 +23,7 @@ script = { file = "./scripts/RunTests.wls"}
 
 [tasks.clean-library-resources]
 script = '''
-rm -rf ./RustLink/LibraryResources
+rm -rf ./build/
 '''
 
 [tasks.build-library-resources]
