--- a/wolfram-library-link/wolfram-library-link-macros/Cargo.toml
+++ b/wolfram-library-link/wolfram-library-link-macros/Cargo.toml
@@ -15,3 +15,8 @@ proc-macro = true
 proc-macro2 = "1.0.36"
 syn = { version = "1.0.85", features = ["full"] }
 quote = "1.0.14"
+
+[features]
+default = []
+
+automate-function-loading-boilerplate = []
