feature: Add logging support to wolfram-library-link-sys/build.rs
* Add dependency on env_logger and initialize logging in build.rs

--- a/wolfram-library-link-sys/Cargo.toml
+++ b/wolfram-library-link-sys/Cargo.toml
@@ -17,5 +17,6 @@ categories = ["external-ffi-bindings", "development-tools::ffi"]
 
 [build-dependencies]
 bindgen = "0.59.2"
+env_logger = "0.10.0"
 
 wolfram-app-discovery = "0.4.1"
