feature: Simplify generation and usage of bindings (#57)
* feature: Make generate_versioned_bindings.rs script generate bindings for multiple targets at once

This makes it so that executing generate_versioned_bindings.rs on macOS
with generate bindings for both MacOSX-x86-64 and MacOSX-ARM64, regardless
of what the Rust target architecture is.

* feature: Always use pre-generated LibraryLink bindings

* Add new generated bindings for 13.0.1/{MacOSX-ARM64, MacOSX-x86-64}

* chore: Generate 13.0.1/Windows-x86-64 bindings

* feature: Begin transitioning from `cargo make` to `cargo xtask` convention

* chore: Regenerate bindings using newer bindgen version

* chore: Fix workspace resolver ambiguity warning

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
+resolver = "2"
 
 members = [
     "wolfram-library-link",
-    "wolfram-library-link-sys"
+    "wolfram-library-link-sys",
+    "xtask"
 ]
