feature: Add experimental support for constructing Kernel exprs
This functionality is highly experimental, and is not included in
the public wolfram-library-link documentation for the time being.

To experiment with this functionality, the documentation that is
available can be viewed locally by running:

    $ cargo doc --open --features experimental-kernel-expr

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,8 @@
 [alias]
 xtask = "run --package xtask --"
+
+# Avoid undefined symbol errors produced by the linker when calling functions
+# declared in wolfram-library-link/src/kernel/sys.rs that aren't resolved until
+# the built LibraryLink library is loaded into a running Kernel.
+[build]
+rustflags = ["-C", "link-args=-undefined dynamic_lookup"]
